<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/widget_head_background"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="#ff000000"
            android:textSize="13sp"
            android:layout_marginLeft="20dp"
            android:text="@string/custed"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingLeft="70dp"
            android:textSize="13sp"
            android:id="@+id/widget_title"
            android:textColor="#ff000000"
            android:gravity="center_horizontal"
            />

    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:divider="@android:color/white"
        android:dividerHeight="1px"
        android:id="@+id/widget_list"
        android:background="@drawable/widget_list_background"
        android:layout_height="0dp"/>


    <TextView
        android:layout_width="match_parent"
        android:background="@android:color/white"
        android:layout_height="1px" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="@drawable/widget_bottom_background"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/widget_preview"
            android:text="@string/preview_day"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:textSize="13sp"
            android:layout_marginRight="10dp"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:id="@+id/widget_week_day"
            android:background="@android:color/transparent"
            android:textColor="#5c5c5e"
            android:textSize="13sp"
            android:layout_height="match_parent" />
        <Button
            android:layout_width="wrap_content"
            android:id="@+id/widget_next"
            android:layout_weight="1"
            android:text="@string/next_day"
            android:layout_marginLeft="10dp"
            android:textSize="13sp"
            android:textColor="@color/colorPrimary"
            android:background="@android:color/transparent"
            android:layout_height="match_parent" />
    </LinearLayout>




</LinearLayout>